<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.shahar91.poems.ui.entry.EntryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="48dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <!-- The padding is needed because of the custom height of the inputLayout -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_hint_username"
                android:inputType="textPersonName"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:text="@={viewModel.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername">

            <!-- The padding is needed because of the custom height of the inputLayout -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_hint_email"
                android:inputType="textEmailAddress"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:passwordToggleEnabled="true">

            <!-- The padding is needed because of the custom height of the inputLayout -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_hint_password"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilReEnterPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:passwordToggleEnabled="true">

            <!-- The padding is needed because of the custom height of the inputLayout -->
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_hint_re_enter_password"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="10dp"
                android:text="@={viewModel.passwordRepeat}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/entry_button_register"
            app:layout_constraintTop_toBottomOf="@id/tilReEnterPassword" />

        <!-- Has to be the same name as the one in fragment_register.xml, just so the reuse_entry_social_footer.xml won't break -->
        <TextView
            android:id="@+id/tvLoginOrRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/common_already_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

        <include layout="@layout/reuse_entry_social_footer"
            android:id="@+id/socialFooter"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>