<?xml version="1.0" encoding="utf-8"?><!--https://medium.com/over-engineering/hands-on-with-material-components-for-android-chips-21dc67c8b956-->
<!--https://medium.com/material-design-in-action/chips-material-components-for-android-46001664a40f-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.shahar91.poems.ui.add.AddPoemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddPoemActivity">

        <include
            android:id="@+id/activityToolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="UnknownIdInLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPoemTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- The padding is needed because of the custom height of the inputLayout -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_poem_hint_title"
                        android:inputType="textCapSentences"
                        android:paddingTop="12dp"
                        android:paddingBottom="10dp"
                        android:text="@={viewModel.poemTitle}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPoemBody"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="18dp"
                    app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">

                    <!-- The padding is needed because of the custom height of the inputLayout -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/add_poem_hint_body"
                        android:inputType="textMultiLine|textCapSentences"
                        android:minLines="15"
                        android:paddingTop="12dp"
                        android:paddingBottom="10dp"
                        android:text="@={viewModel.poemBody}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPoemCategory"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
                    app:layout_constraintTop_toBottomOf="@id/tilPoemBody"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/atvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="Categories"
                        android:inputType="none"
                        android:longClickable="false"
                        android:paddingTop="12dp"
                        android:paddingBottom="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSavePoem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add_poem_button_save"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
